<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mob!lers S-Pen Sample</string>
    <string name="title_drawing_detail" >Drawing Detail</string>
    <string name="pen_only">Pen Only</string>
    <string name="pen">Pen</string>
    <string name="pen_eraser">Eraser</string>
    <string name="text">Text</string>
    <string name="filling">Filling</string>
    <string name="color_picker">Color Picker</string>
    <string name="insert_image">Insert Image</string>
    <string name="redo">Redo</string>
    <string name="undo">Undo</string>
    <string name="pen_settings">Pen settings</string>
    <string name="pen_settings_preset_empty">No preset settings</string>
    <string name="pen_settings_preset_delete_title">Delete</string>
    <string name="pen_settings_preset_delete_msg">Selected pen preset will be permanently erased</string>
    <string name="pen_settings_preset_exist">Already exist</string>
    <string name="pen_settings_preset_maximum_msg">Reached maximum number(12) of preset slot</string>
    <string name="eraser_settings">Eraser settings</string>
    <string name="clear_all">Clear all</string>
    <string name="text_settings">Text settings</string>
    <string name="text_settings_tab_font">Font</string>
    <string name="text_settings_tab_paragraph">Paragraph</string>
    <string name="text_settings_tab_paragraph_align">Align</string>
    <string name="text_settings_tab_list">List</string>
    <string name="textbox_hint">Insert Text</string>
    <string name="texttitle">enter text here</string>
    <string name="filling_settings">Filling settings</string>
    <string name="settingview_close_btn_desc">Close</string>
    <string name="settingview_preset_add_btn_desc">Add</string>
    <string name="settingview_preset_delete_btn_desc">Delete</string>
    <string name="insertcanvasimage">Insert Canvas Image in EditText</string>
    <string name="settinginformation">Setting Information</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="nomusic">No music</string>
    <string name="setimagefilter">Set Image Filter</string>
    <string name="selectimage">Select Image</string>
    <string name="setfilterlevel">Set Filter Level</string>
    <string name="up">▲</string>
    <string name="left">◀</string>
    <string name="right">▶</string>
    <string name="down">▼</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="done">Done</string>
    <string name="xcoordinates">X coordinates</string>
    <string name="ycoordinates">Y coordinates</string>
    <string name="pressure">Pressure</string>
    <string name="tool">Tool</string>
    <string name="touch">Touch</string>
    <string name="hover">Hover</string>
    <string name="context_identifier">Context identifier</string>
    <string name="load_title">Loading</string>
    <string name="load_msg">Please wait while loading...</string>
    <!--  Locale -->
    <string name="align_left_desc">align left</string>
    <string name="align_center_desc">align center</string>
    <string name="align_right_desc">align right</string>
    <string name="user_font_name1">Chococooky</string>
    <string name="user_font_name2">Rosemary</string>
    <string name="pen_settings_chinese_brush_tab">chinese brush</string>
    <string name="pen_settings_beautify_brush_tab">beautify brush</string>
    <string name="pen_settings_beautify_brush_reset">reset</string>
    <string name="pen_settings_beautify_cursive">cursive</string>
    <string name="pen_settings_beautify_sustenance">sustenance</string>
    <string name="pen_settings_beautify_dummy">dummy</string>
    <string name="pen_settings_beautify_modulation">modulation</string>

    <!-- Talkback & Description-->
    <string name="defined_color_desc">select a color</string>
    <string name="custom_color_desc">select a color</string>
    <string name="pen_preview_desc">pen preview</string>
    <string name="pentype_desc_solid">Pen</string>
    <string name="pentype_desc_brush">Art brush</string>
    <string name="pentype_desc_chinese_brush">Calligraphy brush</string>
    <string name="pentype_desc_crayon">Pencil</string>
    <string name="pentype_desc_marker">Magicpen</string>
    <string name="preset_preview_desc">preset preview</string>
    <string name="text_preview_desc">font %1$s, size %2$d, %3$s, %4$s, %5$s</string>
    <string name="text_font_desc">text font</string>
    <string name="text_size_desc">text size</string>
    <string name="settingview_expand_desc">Advanced settings</string>
    <string name="settingview_contract_desc">Advanced settings</string>
    <string name="settingview_scrollbar_desc">settingview scrollbar</string>
    <string name="dropperview_color_desc">colorpicker color</string>
    <string name="seekbar_opacity_desc">Opacity %d percent</string>
    <string name="seekbar_size_desc">Thickness %d percent</string>
    <string name="textbox_delete_desc">delete textbox</string>
    <string name="object_delete_desc">delete object</string>
    <string name="object_rotate_left_desc">object rotate left</string>
    <string name="object_rotate_right_desc">object rotate right</string>
    <string name="seekbar_cursive_desc">cursive %d precent</string>
    <string name="seekbar_sustenance_desc">sustenance %d precent</string>
    <string name="seekbar_dummy_desc">dummy %d precent</string>
    <string name="seekbar_modulation_desc">modulation %d precent</string>
    <string name="beautify_style_desc">beautify style</string>
    <string name="list_type_desc">List type</string>
    <string name="type_bold_on_desc">bold is on</string>
    <string name="type_bold_off_desc">bold is off</string>
    <string name="type_italic_on_desc">italic is on</string>
    <string name="type_italic_off_desc">italic is off</string>
    <string name="type_underline_on_desc">underline is on</string>
    <string name="type_underline_off_desc">underline is off</string>
</resources>
